--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 #server.port=${port:8081}
 
 spring.profiles.active=test
+
+default.sender   = aps180180@gmail.com
+defaut.recipient = aps180180@gmail.com 
